--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "name": "co-user",
+  "version": "1.0.0",
+  "description": "Users`s service for application",
+  "author": "Vladyslav Shevyrov <warboyka48@gmail.com>",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
-    "redis": "^4.6.7",
-    "util": "^0.12.5"
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
