--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
   }
 }
