--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.0",
-    "uuid": "^9.0.0"
+    "jsonwebtoken": "^9.0.0"
   }
 }
