--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.2"
   }
 }
